[tool.poetry]
name = "mrtracker"
version = "0.4.1"
homepage = "https://github.com/markbragin/mrtracker"
description = "A TUI time tracker"
authors = [
    "Mark Bragin <m4rk.brag1n@gmail.com>",
    "Alexandr Ivanov <ivanoid12@yandex.ru>"
]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.1.18"
platformdirs = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
loguru = "^0.6.0"
black = "^22.6.0"
flake8 = "^4.0.1"
grip = "^4.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mrtracker = "mrtracker.__main__:main"
